crates/toml/tests/snapshots/invalid/array/no-comma-03.stderr
TOML parse error at line 1, column 18
  |
1 | no-comma-03 = [ 1 #,]
  |                  ^
unclosed array, expected `]`
